# mvt

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .safety-policy.yml  AUTHORS  CONTRIBUTING.md  Charlotte  Dockerfile  Dockerfile.android  Dockerfile.ios  IOS_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  new.js  public_indicators.json  pyproject.toml  ruff.toml  setup.cfg  setup.py  shell.nix  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: add-issue-to-project.yml  black.yml  codeql-analysis.yml  flake8.yml  lint-python.yml  lint_python.yml  mypy.yml  publish-release-docker.yml  python-package.yml  ruff.yml  tests.yml  update-ios-data.yml
.github/workflows/scripts/: update-ios-releases.py
dev/: mvt-android  mvt-ios
docs/: android.md  command_completion.md  development.md  docker.md  index.md  install.md  introduction.md  iocs.md  license.md  requirements.txt
docs/android/: adb.md  backup.md  download_apks.md  intrusion_logs.md  methodology.md
docs/ios/: install.md  methodology.md  records.md
docs/ios/backup/: check.md  itunes.md  libimobiledevice.md  macosfinderbackup.md
docs/ios/filesystem/: check.md  dump.md
gui/: ios_GUI.py
mvt/android/: __init__.py  cli.py  cmd_check_adb.py  cmd_check_androidqf.py  cmd_check_backup.py  cmd_check_bugreport.py  cmd_download_apks.py  download_apks.py  utils.py
mvt/android/artifacts/: artifact.py  dumpstate_artifact.py  dumpsys_accessibility.py  dumpsys_adb.py  dumpsys_appops.py  dumpsys_battery_daily.py  dumpsys_battery_history.py  dumpsys_dbinfo.py  dumpsys_package_activities.py  dumpsys_packages.py  dumpsys_receivers.py  getprop.py  processes.py  settings.py
mvt/android/data/: root_binaries.txt  root_packages.txt  safe_packages.txt
mvt/android/lookups/: __init__.py  koodous.py  virustotal.py
mvt/android/modules/: __init__.py  detection_mixins.py
mvt/android/modules/adb/: __init__.py  base.py  (+24 more)
mvt/android/parsers/: __init__.py  backup.py  dumpsys.py  getprop.py
mvt/common/: alerting.py  artifact.py  cmd_check_iocs.py  command.py  encoding.py  help.py  indicators.py  logo.py  module.py  options.py  updates.py  url.py  utils.py  version.py  virustotal.py
mvt/ios/: __init__.py  cli.py  cmd_check_backup.py  cmd_check_fs.py  cmd_check_usb.py  decrypt.py  keyutils.py  lockdown.py  versions.py
mvt/ios/data/: ios_models.json  ios_versions.json
mvt/ios/modules/: base.py  net_base.py
scripts/: lint.sh
src/mvt/android/: cli.py  cmd_check_adb.py  cmd_check_androidqf.py  cmd_check_backup.py  cmd_check_bugreport.py  cmd_check_intrusion_logs.py  cmd_download_apks.py  utils.py
src/mvt/common/: alerts.py  artifact.py  cmd_check_iocs.py  command.py  completion.py  config.py  help.py  indicators.py  log.py  logo.py  module.py  module_loader.py  module_types.py  telemetry.py  updates.py  url.py  utils.py  version.py  virustotal.py
src/mvt/ios/: cli.py  cmd_check_backup.py  cmd_check_fs.py  decrypt.py  versions.py
src/shell_completion/: .mvt-android-complete.bash  .mvt-android-complete.zsh  .mvt-ios-complete.bash  .mvt-ios-complete.zsh
tests/: __init__.py  conftest.py  test_check_android_adb_removed.py  test_check_android_androidqf.py  test_check_android_backup.py  test_check_android_bugreport.py  test_check_backup.py  test_check_bugreport.py  test_check_ios_backup.py  test_completion.py  test_custom_modules.py  test_ios_versions.py  utils.py
tests/android/: test_androidqf_sms.py  test_artifact.py  test_artifact_dumpstate.py  test_artifact_dumpsys_accessibility.py  test_artifact_dumpsys_adb.py  test_artifact_dumpsys_appops.py  test_artifact_dumpsys_battery_daily.py  test_artifact_dumpsys_battery_history.py  test_artifact_dumpsys_dbinfo.py  test_artifact_dumpsys_package_activities.py  test_artifact_dumpsys_packages.py  test_artifact_dumpsys_platform_compat.py  test_artifact_dumpsys_receivers.py  test_artifact_getprop.py  test_artifact_processes.py  test_artifact_tombstones.py  test_backup_module.py  test_backup_parser.py  test_bugreport.py  test_bugreport_appops.py  test_dumpsys_parser.py  test_intrusion_logs.py
tests/android_adb/: test_packages.py
tests/android_androidqf/: __init__.py  test_dumpsys_adbstate.py  test_dumpsys_battery_daily.py  test_dumpsys_battery_history.py  test_dumpsys_dbinfo.py  test_dumpsys_platform_compat.py  test_dumpsysaccessbility.py  test_dumpsysappops.py  test_dumpsyspackages.py  test_dumpsysreceivers.py  test_files.py  test_getprop.py  test_mounts.py  test_packages.py  test_processes.py  test_root_binaries.py  test_settings.py  test_sms.py  test_tcc.py
tests/android_bugreport/: test_bugreport.py
tests/artifacts/: .gitignore  Info.plist  Manifest.db  generate_stix.py  pegasus.stix2  test.stix2  viber-database_test_no_table.sqlite
tests/artifacts/android_backup/: backup.ab  backup3.ab
tests/artifacts/android_data/: dumpsys_accessibility.txt  dumpsys_accessibility_enabled.txt  dumpsys_accessibility_v14_or_later.txt  dumpsys_adb.txt  dumpsys_adb_xml.txt  dumpsys_appops.txt  dumpsys_battery.txt  dumpsys_dbinfo.txt  dumpsys_packages.txt  dumpsys_platform_compat.txt  getprop.txt  ps.txt  tombstone_process  tombstone_process.pb
tests/artifacts/androidqf/: backup.ab  dumpsys.txt  files.json  getprop.txt  packages.json  ps.txt  root_binaries.json  settings_random.txt
tests/artifacts/androidqf_encrypted/: backup.ab
tests/artifacts/ios_backup/: Manifest.db
tests/artifacts/stix2/: cytrox.stix2
tests/common/: test_alerts.py  test_command.py  test_date_conversions.py  test_encoding.py  test_indicators.py  test_module_loader.py  test_utils.py
tests/ios/: test_backup_info.py  test_datausage.py  test_manifest.py  test_safari_browserstate.py  test_sms.py  test_tcc.py
tests/ios_backup/: test_backup_info.py  test_calendar.py  test_datausage.py  test_global_preferences.py  test_manifest.py  test_safari_browserstate.py  test_sms.py  test_tcc.py  test_viber.py  test_webkit_resource_load_statistics.py
tests/ios_fs/: test_cache_files.py  test_filesystem.py
tests/ios_usb/: test_applications.py  test_device_info.py  test_processes.py
(+248 files in other folders)
